--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "me_2023-0914-ecommerce-sass-redux_react",
+  "homepage": "https://ig-kim2511.github.io/me_2023-0914-ecommerce-sass-redux_react-build/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
